--- a/style_index.css
+++ b/style_index.css
@@ -8,6 +8,15 @@
 	-webkit-animation: gradientAnimation 40s ease infinite;
 	animation: gradientAnimation 40s ease infinite;
 }
+
+.text{
+	font-size: 5vw;
+	overflow-wrap: break-word;
+}
+.span{
+	font-size: 5vw;
+	overflow-wrap: break-word;
+}
 @-webkit-keyframes gradientAnimation {
 	0%   { background-position: 0% 30%, 0 0;}
 	50%  { background-position: 100% 70%, 0 0;}
